Lexical Analyzer/tests/test_for_invalid.c
#include <stdio.h>

void main()
{
    int i;

    for(i = 10; i <=20; i++)
    {
        printf("Hello");
        printf("%s ", "i);
        
        for(i = 0; i <= 10; i++);
    }

}